Updates while on vacation

--- a/Runkeeper Weight Tracker/AndroidManifest.xml
+++ b/Runkeeper Weight Tracker/AndroidManifest.xml
@@ -7,11 +7,12 @@
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".RunKeeperWeightTracker">
         <activity android:name="com.conyers.runkeeper.CredentialRequestActivity" android:label="@string/app_name">
-                    <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="UpdateWeightActivity"></activity>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
