--- a/Runkeeper Weight Tracker/AndroidManifest.xml
+++ b/Runkeeper Weight Tracker/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.conyers.runkeeper"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="11"/>
+    <uses-sdk android:minSdkVersion="10"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".RunKeeperWeightTracker">
         <activity android:name="com.conyers.runkeeper.CredentialRequestActivity" android:label="@string/app_name">
@@ -13,6 +13,7 @@
             </intent-filter>
         </activity>
         <activity android:name="UpdateWeightActivity"></activity>
+        <activity android:name="ListWeightActivity"></activity>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
